--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div id="rain-sketch"></div>
-	<script type="text/javascript" src="assets/js/sketch.min.js"></script>
-	<script type="text/javascript" src="assets/js/app.js"></script>
+	<script type="text/javascript" src="source/sketch.min.js"></script>
+	<script type="text/javascript" src="source/app.js"></script>
 </body>
 </html>
